[package]
name = "pdb2"
version = "0.9.1"
description = "A parser for Microsoft PDB (Program Database) debugging information"
repository = "https://github.com/afranchuk/pdb"
authors = ["Jan Michael Auer <mail@jauer.org>", "Will Glynn <will@willglynn.com>", "Alex Franchuk <alex.franchuk@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"
exclude = [
    "fixtures/*",
    "scripts/*",
]

[dependencies]
fallible-iterator = "0.3"
scroll = "0.12"
uuid = "1"

[dev-dependencies]
# for examples/
getopts = "0.2.21"

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-name = "{{version}}"
tag-message = "Release {{version}}"
